fix: flexbox with column modifier default gap

--- a/src/components/Layout/flexbox.scss
+++ b/src/components/Layout/flexbox.scss
@@ -31,6 +31,10 @@ $spacer: var(--spacer-regular);
 
   &--column {
     flex-direction: column;
+
+    &.d-flex--minus-margin {
+      gap: calc(#{$spacer} * 2);
+    }
   }
 
   &--minus-margin {
